name:                elm-lang-de
version:             0.1.0.0
synopsis:            The backend powering non-static parts of elm-lang.de
description:         Please see README.md
homepage:            https://elm-lang.de
license:             BSD3
license-file:        LICENSE
author:              Bastian Krol, Dennis Reimann
maintainer:          bastian.krol@codecentric.de
copyright:           2016 Bastian Krol
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , pwstore-fast
                     , uuid
  hs-source-dirs:      backend/src
  exposed-modules:     ElmLangDe.Util
  default-language:    Haskell2010

executable elm-lang-de
  hs-source-dirs:      backend/app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , base-compat
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , convertible
                     , cookie
                     , dbmigrations
                     , ede
                     , email-validate
                     , exceptions
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , HDBC
                     , HDBC-postgresql
                     , network-uri
                     , pwstore-fast
                     , retry
                     , elm-lang-de
                     , servant
                     , servant-client
                     , servant-ede
                     , servant-server
                     , text
                     , time
                     , transformers
                     , utf8-string
                     , uuid
                     , uuid-aeson
                     , wai
                     , warp
  other-modules:       API
                     , AppPage.API
                     , AppPage.Server
                     , Database.Migration
                     , Database.StatementMap
                     , Database.UUIDConversion
                     , Html.API
                     , Html.Server
                     , Json.API
                     , Json.Server
                     , Profile.API
                     , Profile.API
                     , Profile.Converter
                     , Profile.Converter
                     , Profile.Model
                     , Profile.ProfileHeadResponse
                     , Profile.Request
                     , Profile.Response
                     , Profile.Server
                     , Profile.SQL
                     , Server
                     , StaticPage.Data
                     , StaticPage.Server
                     , Util.Config
                     , Util.Template
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:dennisreimann/elm-lang-de.git
