name:                elm-lang-de
version:             0.1.0.0
synopsis:            The backend powering non-static parts of elm-lang.de
description:         Please see README.md
homepage:            https://elm-lang.de
license:             BSD3
license-file:        LICENSE
author:              Bastian Krol, Dennis Reimann
maintainer:          bastian.krol@codecentric.de
copyright:           2016 Bastian Krol
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , pwstore-fast
                     , uuid
  hs-source-dirs:      backend/src
  exposed-modules:     ElmLangDe.Util
  default-language:    Haskell2010

executable elm-lang-de
  hs-source-dirs:      backend/app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , base-compat
                     , aeson
                     , binary
                     , bytestring
                     , containers
                     , convertible
                     , cookie
                     , dbmigrations
                     , email-validate
                     , exceptions
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , HDBC
                     , HDBC-postgresql
                     , network-uri
                     , pwstore-fast
                     , retry
                     , elm-lang-de
                     , servant
                     , servant-client
                     , servant-server
                     , text
                     , time
                     , transformers
                     , utf8-string
                     , uuid
                     , uuid-aeson
                     , wai
                     , warp
  other-modules:       API
                     , AppBootstrap.API
                     , AppBootstrap.Response
                     , AppBootstrap.Server
                     , Database.Migration
                     , Database.StatementMap
                     , Database.UUIDConversion
                     , Json.API
                     , Json.Server
                     , OAuth.API
                     , OAuth.GitHub.API
                     , OAuth.GitHub.Server
                     , OAuth.Server
                     , Profile.API
                     , Profile.Converter
                     , Profile.Model
                     , Profile.ProfileHeadResponse
                     , Profile.Request
                     , Profile.Response
                     , Profile.SQL
                     , Profile.Server
                     , Server
                     , Util.Config
                     , Util.Validation
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@github.com:dennisreimann/elm-lang-de.git
